--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,13 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -35,4 +36,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+img {
+  width: 400px;
+}
+
+.test {
+  color: black;
 }
